<resources>
    <string name="app_name">CareConnect1</string>
    <string name="version_1_0_0">Version 1_0_0</string>
    <string name="continue_without_login">continue without login\n</string>
    <string name="find_childcare_easily">Find Childcare Easily</string>
    <string name="book">CareConnect allows you to quickly explore,\nfind and compare childcare services near you.\nSmart filters enable you to narrow your childcare options fast to only the services that match your unique needs</string>
    <string name="enquire_and_apply_quickly">Enquire And Apply Quickly</string>
    <string name="simple_enquire">CareConnect makes it simple to enquire and apply for childcare services.Simply save your favorites and then enquire or apply for multiple services in one go!</string>
    <string name="signup">SignUp</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">password</string>
    <string name="create_account">create account</string>
    <string name="already_have_an_account_signin_now">Already have an account?SignIn</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="open">open</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="for_parents">for_parents</string>
    <string name="for_care_providers">for_care_providers</string>
    <string name="user">user</string>
    <string name="administrator">Administrator</string>
    <string name="profile">profile</string>
    <string name="booking">booking</string>
    <string name="offer">offer</string>
    <string name="reviews">Reviews</string>
    <string name="sites">sites</string>
    <string name="payments">payments</string>
    <string name="rate_app">Rate App</string>
    <string name="app">App</string>
    <string name="more_apps">More Applications</string>
    <string name="share_app">Share App</string>
    <string name="help">Help</string>
    <string name="about_us">About us</string>
    <string name="help_and_support">Help and Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="home">home</string>
    <string name="support">support</string>
    <string name="signin">Signin</string>
    <string name="login_now">Login</string>
    <string name="loading">--</string>
    <string name="users">users</string>
    <string name="images">Images</string>
    <string name="add_new">Add New</string>
    <string name="first_name">"First name "</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="book_now">Book now</string>
    <string name="booking_date">Booking Date</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="parent">Parent</string>
    <string name="write_the_reason_for_rejection">Write the reason for rejecting this booking</string>
    <string name="provider">Provider</string>
    <string name="payment">Payment</string>
    <string name="status">Status</string>
    <string name="services">Services</string>
    <string name="books_reviews">Books Reviews</string>
    <string name="no_reviews_for_this_book">No reviews for this Book</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>