<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/user">
        <menu>
            <item
                android:title="@string/administrator"
                app:showAsAction="always"
                android:id="@+id/nav_admin"
                android:icon="@drawable/user"/>
            <item
                android:title="@string/profile"
                app:showAsAction="always"
                android:id="@+id/nav_profile"
                android:icon="@drawable/user"/>

            <item
                android:title="@string/booking"
                app:showAsAction="always"
                android:id="@+id/nav_booking"
                android:icon="@drawable/calendar"
                tools:ignore="AlwaysShowAction" />

            <item
                android:title="@string/reviews"
                app:showAsAction="always"
                android:id="@+id/nav_reviews"
                android:icon="@drawable/review"/>

            <item
                android:title="@string/sites"
                app:showAsAction="always"
                android:id="@+id/nav_sites"
                android:icon="@drawable/location"/>

            <item
                android:title="@string/payments"
                app:showAsAction="always"
                android:id="@+id/nav_payments"
                android:icon="@drawable/payment"/>
        </menu>
    </item>
    <item android:title="@string/app">
        <menu>

            <item
                android:title="@string/rate_app"
                app:showAsAction="always"
                android:id="@+id/nav_rate"
                android:icon="@drawable/rate"/>
            <item
                android:title="@string/share_app"
                app:showAsAction="always"
                android:id="@+id/nav_share"
                android:icon="@drawable/share"/>
            <item
                android:title="@string/more_apps"
                app:showAsAction="always"
                android:id="@+id/nav_more"
                android:icon="@drawable/more"
                tools:ignore="AlwaysShowAction" />
        </menu>
    </item>

    <item android:title="@string/help">
        <menu>
            <item
                android:title="@string/about_us"
                app:showAsAction="always"
                android:id="@+id/nav_about"
                android:icon="@drawable/person"/>

            <item
                android:title="@string/help_and_support"
                app:showAsAction="always"
                android:id="@+id/nav_help"
                android:icon="@drawable/help"/>

            <item
                android:title="@string/privacy_policy"
                app:showAsAction="always"
                android:id="@+id/nav_policy"
                android:icon="@drawable/privacy"/>
        </menu>
    </item>
</menu>