<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/home"
        app:showAsAction="always"
        android:id="@+id/home"
        android:icon="@drawable/home"/>
    <item
        android:title="@string/booking"
        app:showAsAction="always"
        android:id="@+id/booking"
        android:icon="@drawable/calendar"
        tools:ignore="AlwaysShowAction" />
    <item
        android:title="@string/support"
        app:showAsAction="always"
        android:id="@+id/support"
        android:icon="@drawable/support"/>
    <item
        android:title="@string/profile"
        app:showAsAction="always"
        android:id="@+id/profile"
        android:icon="@drawable/user"/>
</menu>