<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_margin="5dp"
    android:background="@drawable/drawable_border"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/layout_1"
        android:layout_height="wrap_content">
        <TextView
            style="@style/textViewStyleDetail"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:paddingStart="10dp"
            android:layout_width="0dp"
            android:layout_weight="1.7"
            android:id="@+id/delete_cause"
            android:text="@string/loading"
            tools:ignore="RtlSymmetry" />
        <com.google.android.material.imageview.ShapeableImageView
            style="@style/textViewStyleDetail"
            android:layout_width="0dp"
            android:id="@+id/icon_delete"
            android:layout_weight="0.3"
            android:layout_height="20dp"
            android:src="@drawable/ic_delete"
            android:text="@string/loading"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_below="@+id/layout_1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">



    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_add_image"
        android:id="@+id/icon"/>


        <TextView
            style="@style/textViewStyleDetail"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:id="@+id/description"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:weightSum="4"
        android:padding="5dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textViewStyleTitle"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/price"/>

        <TextView
            style="@style/textViewStyleDetail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:id="@+id/price"/>

        <TextView
            style="@style/textViewStyleTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"/>

        <TextView
            style="@style/textViewStyleDetail"
            android:layout_width="0dp"
            android:gravity="start"
            android:layout_weight="1"
            android:id="@+id/date"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>