<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_margin="5dp"
    android:background="@drawable/drawable_border"
    android:layout_height="wrap_content">



    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header_title"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:scaleType="centerCrop"
                app:shapeAppearance="@style/circle" />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/icon"
                android:layout_margin="3dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:padding="5dp"

                    android:id="@+id/layout_price"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/textViewStyleTitle"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/price"/>

                    <TextView
                        style="@style/textViewStyleDetail"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:id="@+id/price"/>


                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:weightSum="2"
                    android:padding="5dp"
                    android:layout_toEndOf="@id/icon"
                    android:layout_below="@+id/layout_price"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        style="@style/textViewStyleTitle"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/date"/>

                    <TextView
                        style="@style/textViewStyleDetail"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:id="@+id/date"/>


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

        <TextView
            android:layout_below="@+id/header_title"
            style="@style/textViewStyleDetail"
            android:padding="10dp"
            android:ellipsize="marquee"
            android:maxLines="2"
            android:layout_margin="10dp"
            android:id="@+id/description"/>

        <TextView
           style="@style/textViewStyleTitle"
            android:layout_centerHorizontal="true"
            android:textColor="@color/purple"
            android:id="@+id/btn_book"
            android:text="@string/book_now"
            android:layout_below="@+id/description"/>



    </RelativeLayout>


</RelativeLayout>